fix: TDesign dark mode style

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -58,6 +58,20 @@
 	--vp-font-family-mono: "FiraCode";
 }
 
+/** TDesign  */
+
+:root {
+	--td-border-level-2-color: var(--vp-c-brand-soft) !important;
+	--td-brand-color: var(--vp-c-brand-1) !important;
+	--td-brand-color-light: var(--vp-c-brand-soft) !important;
+	--td-brand-color-hover: var(--vp-c-brand-1) !important;
+	/* 字体 family token */
+	--td-font-family: SourceHanSerifCN, PingFang SC, Microsoft YaHei,
+		Arial Regular;
+	--td-font-family-medium: SourceHanSerifCN, PingFang SC, Microsoft YaHei,
+		Arial Medium;
+}
+
 /**
  * 特殊配置
  * -------------------------------------------------------------------------- */
